[gd_scene load_steps=8 format=3 uid="uid://5hmrngqjuvqc"]

[ext_resource type="Script" path="res://projectiles/laser.gd" id="1_ix6qe"]
[ext_resource type="Texture2D" uid="uid://clulx7q11p0bu" path="res://assets/laser_small.png" id="1_nnl75"]
[ext_resource type="Script" path="res://components/move_component.gd" id="2_yqcjx"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="4_ck8ms"]
[ext_resource type="Script" path="res://components/flash_component.gd" id="5_lk5id"]
[ext_resource type="Script" path="res://components/hitbox_component.gd" id="6_hkwb3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_841xl"]
size = Vector2(4, 8)

[node name="Laser" type="Node2D"]
script = ExtResource("1_ix6qe")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_nnl75")

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("2_yqcjx")
actor = NodePath("..")
velocity = Vector2(0, -200)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(0.2, 0.4)

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("4_ck8ms")
sprite = NodePath("../Sprite2D")
scale_amount = Vector2(2, 2)
scale_duration = 1.0

[node name="FlashComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("5_lk5id")
sprite = NodePath("../Sprite2D")
flash_duration = 0.1

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("6_hkwb3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_841xl")
